objects/OrderItem.object
<CustomObject><fields>
<fields>
        <fullName>RTRN_Tracking_Link__c</fullName>
        <formula>HYPERLINK("http://trkcnfrm1.smi.usps.com/PTSInternetWeb/InterLabelInquiry.do?origTrackNum="&amp;  Return_Tracking_Number__c  , Return_Tracking_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Tracking Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Registered_Date__c</fullName>
        <description>Date/Time Order Line is registered to a user</description>
        <inlineHelpText>Date/Time Order Line is registered to a user</inlineHelpText>
        <label>Registered Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Required_Yield__c</fullName>
        <description>Required Yield in GB. Applies to kit products only. Required field for Sample Manifest export integration.</description>
        <inlineHelpText>Required Yield in GB. Applies to kit products only. Required field for Sample Manifest export integration.</inlineHelpText>
        <label>Required Yield</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Resend_Original_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If populated, this Order Product is a replacement for the Original Kit.</description>
        <inlineHelpText>If populated, this Order Product is a replacement for the Original Kit.</inlineHelpText>
        <label>Resend: Original Kit</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Return_Tracking_Number__c</fullName>
        <description>Tracking number supplied by kit supplier for shipment from end user to lab.</description>
        <inlineHelpText>Tracking number supplied by kit supplier for shipment from end user to lab.</inlineHelpText>
        <label>Return Tracking Number</label>
        <length>200</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SAL_Container_Name__c</fullName>
        <description>Populated via SFDC - LIMS integration</description>
        <inlineHelpText>Populated via SFDC - LIMS integration</inlineHelpText>
        <label>SAL Container Name</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SAL_Well_Location__c</fullName>
        <label>SAL Well Location</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sample_Error_Detail__c</fullName>
        <description>For capturing any error detail related to the Sample process. BaseSpace integration and beyond.</description>
        <inlineHelpText>For capturing any error detail related to the Sample process. BaseSpace integration and beyond.</inlineHelpText>
        <label>Sample Error Detail</label>
        <length>250</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sample_Source__c</fullName>
        <formula>text( PricebookEntry.Product2.Sample_Source__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Source</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Sample_Status_Updated__c</fullName>
        <description>Last date/time that the sample status was updated. Updated via code, not WFR.</description>
        <inlineHelpText>Last date/time that the sample status was updated. Updated via code, not WFR.</inlineHelpText>
        <label>Sample Status Updated</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Sample_Status__c</fullName>
        <description>Sample status labels as a sample moves through the sequencing process.</description>
        <inlineHelpText>Sample status labels as a sample moves through the sequencing process.</inlineHelpText>
        <label>Sample Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Submission</fullName>
                </value>
                <value>
                    <fullName>Manifest Uploaded</fullName>
                </value>
                <value>
                    <fullName>DNA Extraction Started</fullName>
                </value>
                <value>
                    <fullName>DNA Extraction Complete</fullName>
                </value>
                <value>
                    <fullName>Library Prep Complete</fullName>
                </value>
                <value>
                    <fullName>Enrichment Complete</fullName>
                </value>
                <value>
                    <fullName>Clustering Complete</fullName>
                </value>
                <value>
                    <fullName>Rehyb/Fail FC</fullName>
                </value>
                <value>
                    <fullName>Sequencing Complete</fullName>
                </value>
                <value>
                    <fullName>Sequencing Data QC Complete</fullName>
                </value>
                <value>
                    <fullName>Sequencing Data QC Fail</fullName>
                </value>
                <value>
                    <fullName>Data Delivery Complete</fullName>
                </value>
                <value>
                    <fullName>Data Delivery Fail</fullName>
                </value>
                <value>
                    <fullName>Requeue to Saliva Tube</fullName>
                </value>
                <value>
                    <fullName>Require New Sample</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Select_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox shouldn't be visible in Order Product's layout. It is used in Accessioning App, only.</description>
        <label>Select Product</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Service_Level_Customer_Facing__c</fullName>
        <formula>Case(Service_Level__c , 
"First_class","First Class", 
"priority","Priority", 
"standard_overnight","Standard Overnight", 
"first_overnight","First Overnight", 
"priority_overnight","Priority Overnight", 
"ground","Ground", 
"home_delivery","Home Delivery", 
"express_saver","Express Saver", 
"2-day","2-Day", 
"")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Level (Customer Facing)</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Service_Level__c</fullName>
        <description>Shipping Service Level</description>
        <inlineHelpText>Shipping Service Level</inlineHelpText>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Level</valueSetName>
        </valueSet>
    </fields><fields>
        <fullName>ShipTo_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required for Email Alerts triggered at the Order Item level.</description>
        <inlineHelpText>Required for Email Alerts triggered at the Order Item level.</inlineHelpText>
        <label>ShipTo Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Products (ShipTo Contact)</relationshipLabel>
        <relationshipName>Order_Products_ShipTo</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Shipping_Handling_Amount__c</fullName>
        <description>This formula captures the Net Amount field when a Shipping &amp; Handling product is entered. This field is part of a Rollup Summary field to the Order record to assist in calculating possible Refund amounts in the Services Toolbox.</description>
        <inlineHelpText>This formula captures the Net Amount field when a Shipping &amp; Handling product is entered. This field is part of a Rollup Summary field to the Order record to assist in calculating possible Refund amounts in the Services Toolbox.</inlineHelpText>
        <label>Shipping &amp; Handling Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Total_Amount_Refunded__c</fullName>
        <description>This field is a tally of all Refund Order Event Item records attached to this Order Product. It is used to help identify the Net Amount that may remain for future refunds.</description>
        <inlineHelpText>This field is a tally of all Refund Order Event Item records attached to this Order Product. It is used to help identify the Net Amount that may remain for future refunds.</inlineHelpText>
        <label>Total Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>Formula field that looks up to product record and describes product type on the Order Product level. (APP or KIT)</description>
        <formula>text(PricebookEntry.Product2.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that looks up to product record and describes product type on the Order Product level. (APP or KIT)</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>UserId__c</fullName>
        <formula>registeredBy__r.userid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserId</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Well_Location__c</fullName>
        <description>Well location of kit in accessioning lab.</description>
        <inlineHelpText>Well location of kit in accessioning lab.</inlineHelpText>
        <label>Well Location</label>
        <length>3</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Order_Close_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to TRUE by boomi when successfully created</description>
        <inlineHelpText>Set to TRUE by boomi when successfully created</inlineHelpText>
        <label>Work Order Close Created</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Work_Order_Close_ID__c</fullName>
        <description>Internal Work Order Close ID delivered from Netsuite via boomi integration</description>
        <inlineHelpText>Internal Work Order Close ID delivered from Netsuite via boomi integration</inlineHelpText>
        <label>Work Order Close ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Order_Completion_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Netsuite Work Order Completion record was successfully created. Occurs when Sample Status is set to "Data Delivery Complete"</description>
        <inlineHelpText>Netsuite Work Order Completion record was successfully created. Occurs when Sample Status is set to "Data Delivery Complete"</inlineHelpText>
        <label>Work Order Completion Created</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Work_Order_Completion_ID__c</fullName>
        <description>Captures the NS Work Order Completion internal ID.</description>
        <inlineHelpText>Captures the NS Work Order Completion internal ID.</inlineHelpText>
        <label>Work Order Completion ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Order_Issue_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Netsuite Work Order Issue record was successfully created. Occurs when Sample Status is set to "DNA Extraction Started"</description>
        <inlineHelpText>Netsuite Work Order Issue record was successfully created. Occurs when Sample Status is set to "DNA Extraction Started"</inlineHelpText>
        <label>Work Order Issue Created</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Work_Order_Issue_ID__c</fullName>
        <description>Captures the NS Work Order Issue internal ID.</description>
        <inlineHelpText>Captures the NS Work Order Issue internal ID.</inlineHelpText>
        <label>Work Order Issue ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Order_URL__c</fullName>
        <formula>if( ISBLANK( Work_Order__c ),"", "https://system.na2.netsuite.com/app/accounting/transactions/workord.nl?id="&amp; Work_Order__c &amp;"&amp;whence=")</formula>
        <label>Work Order URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Work_Order__c</fullName>
        <description>Netsuite Internal ID for Purchase Order created in Netsuite for kit lines</description>
        <inlineHelpText>Netsuite Internal ID for Purchase Order created in Netsuite for kit lines</inlineHelpText>
        <label>Work Order ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>registeredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Product level field to capture who registers a specific product.</description>
        <inlineHelpText>Order Product level field to capture who registers a specific product.</inlineHelpText>
        <label>Registered By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Products (Registered By)</relationshipLabel>
        <relationshipName>Registered_Kits_c</relationshipName>
        <type>Lookup</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><validationRules>
        <fullName>Block_OP_Edits</fullName>
        <active>true</active>
        <description>Prevent unauthorized users from editing the OP Quantity or Price. This is needed because it's not possible to remove access to editing these fields for anyone who has edit access to Order Products without a custom VF solution</description>
        <errorConditionFormula>AND( 
NOT(OR(
$User.ProfileId ="00e36000000oZf1", 
$User.ProfileId ="00e36000000MSK9")),

OR(
PRIORVALUE(Quantity)&lt;&gt; Quantity,  
PRIORVALUE(UnitPrice )&lt;&gt;UnitPrice )
)</errorConditionFormula>
        <errorMessage>Access Denied. Please contact a Salesforce Administrator.</errorMessage>
    </validationRules></CustomObject>